rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__pi.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"SELECT PI() AS PI\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+-------------------+
| PI                |
+-------------------+
| 3.141592653589793 |
+-------------------+
