rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__quote_ident.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"SELECT quote_ident('pg_catalog') i1, quote_ident('Foo bar') i2\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+------------+-----------+
| i1         | i2        |
+------------+-----------+
| pg_catalog | "Foo bar" |
+------------+-----------+
