rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__redshift_charindex.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(r#\"\n                SELECT\n                    charindex('d', 'abcdefg') d,\n                    charindex('h', 'abcdefg') none\n                ;\"#.to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+---+------+
| d | none |
+---+------+
| 4 | 0    |
+---+------+
