rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__to_char_2.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"\n                SELECT to_char(x, 'YYYY-MM-DD HH24:MI:SS.MS TZ')\n                FROM  (\n                        SELECT Str_to_date('2021-08-31 11:05:10.400000', '%Y-%m-%d %H:%i:%s.%f') x\n                    UNION ALL\n                        SELECT str_to_date('2021-08-31 11:05', '%Y-%m-%d %H:%i') x\n                ) e\n                \".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+--------------------------------------------------+
| to_char(e.x,Utf8("YYYY-MM-DD HH24:MI:SS.MS TZ")) |
+--------------------------------------------------+
| 2021-08-31 11:05:10.400                          |
| 2021-08-31 11:05:00.000                          |
+--------------------------------------------------+
