rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__txid_current.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(r#\"SELECT txid_current();\"#.to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+--------------+
| txid_current |
+--------------+
| 1            |
+--------------+
